# messenger_region_classifier

./: .gitignore  README.md  init  pyproject.toml
docs/: REPRODUCE.md
examples/: crossing_list_handling.ipynb  minimal_application_example.ipynb  raw_model_output_handelling.ipynb
scripts/: init  make_messenger_metakernel
src/: apply_model.py  apply_to_whole_mission.py  create_messenger_mission_file.py  create_model.py  find_crossings_from_raw_model_output.py  load_data.py  make_messenger_metakernel.py  optimise_model.py  reduce_data.py  select_features.py  test.py
src/create_figures/: feature_extraction_example.py  full_orbit_classification.py
src/define_unknown_regions/: create_raw_regions_list.py  plot_region_confidence_against_duration.py  unknown_region_statistics.py
src/figure_creation/: bad_application_example.py  classification_spatial_spread.py  contrasting_bow_shock_examples.py  contrasting_magnetopause_examples.py  crossing_interval_spatial_spread.py  distribution_of_reduced_data.py  feature_extraction_example.py  full_orbit_classification.py  ideal_application_example.py  messy_application_example.py  model_metrics.py  new_crossing_spatial_spread.py  training_selection_region.py  trajectories_example.py
src/postprocessing/: 1_ensure_start_and_end.py  2_include_hidden_crossings.py
src/quicklook/: check_unexpected_region_entries.py  get_model_accuracy.py  view_model_output.py
