[project]
name = "messenger-region-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hermpy",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "spiceypy>=7.0.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hermpy = { git = "https://github.com/daraghhollman/hermpy" }
