[project]
name = "messenger-region-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hermpy",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spiceypy>=7.0.0",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
hermpy = { git = "https://github.com/daraghhollman/hermpy" }
